# HandsDetection

./: .gitignore  CMakeLists.txt  README.md
Code/: test  test.cpp
HandDetection/include/: detection.hpp  segmentation.hpp  utils.hpp
HandDetection/src/: detection.cpp  segmentation.cpp  utils.cpp
HandDetection/test/: test.cpp
Model/: custom_data.yaml  data.yaml  handdetection.ipynb
